tests/should_fail/diagnostics/div_unimplemented.stderr
error[E0277]: Cannot divide `i32` by `_` in logic
 --> div_unimplemented.rs:8:5
  |
8 |     x / y
  |     ^----
  |     |
  |     no implementation for `i32 / _` in logic
  |     required by a bound introduced by this call
  |
  = help: the trait `creusot_std::logic::ops::DivLogic<_>` is not implemented for `i32`
help: the following other types implement trait `creusot_std::logic::ops::DivLogic<Rhs>`
 --> creusot-std/src/logic/real.rs:101:0
  |
  = note: `creusot_std::logic::real::Real`
 ::: creusot-std/src/logic/real.rs:214:0
  |
  = note: `creusot_std::logic::real::PositiveReal`
 --> creusot-std/src/logic/int.rs:186:0
  |
  = note: `creusot_std::logic::Int`

error[E0277]: Cannot divide `i32` by `i32` in logic
 --> div_unimplemented.rs:8:5
  |
8 |     x / y
  |     ^^^^^ no implementation for `i32 / i32` in logic
  |
  = help: the trait `creusot_std::logic::ops::DivLogic` is not implemented for `i32`
help: the following other types implement trait `creusot_std::logic::ops::DivLogic<Rhs>`
 --> creusot-std/src/logic/real.rs:101:0
  |
  = note: `creusot_std::logic::real::Real`
 ::: creusot-std/src/logic/real.rs:214:0
  |
  = note: `creusot_std::logic::real::PositiveReal`
 --> creusot-std/src/logic/int.rs:186:0
  |
  = note: `creusot_std::logic::Int`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
